# specdrift

./: .gitignore  BUG_REPORT.md  CMakeLists.txt  README.md  specdrift-mockup-v2.html
Source/Core/: Parameters.cpp  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: CurveState.cpp  CurveState.h  SpectralEngine.cpp  SpectralEngine.h  SpectrogramFIFO.h
Source/UI/: FooterSliderComponent.cpp  FooterSliderComponent.h  OrbKnobComponent.cpp  OrbKnobComponent.h  SpecdriftUI.html  SpectrogramComponent.cpp  SpectrogramComponent.h  check_native_interop.js  juce-index.js
